--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body
+{
+  background-color:rgb(0, 0, 0)
+}
+
 div.a
 {
   text-align: left;
@@ -7,7 +12,7 @@ div.a
   line-height:5px;
 }
 
-a:link, a:visited 
+a:link, a:visited
 {
   color: rgb(0, 102, 204);
 }
