--- a/style.css
+++ b/style.css
@@ -3,10 +3,22 @@ body
   background-color:rgb(0, 0, 0)
 }
 
-div.a
+.wrap {max-width: 1200px;} 
+
+.box
 {
-  text-align: left;
+  width: 700px;
+  border: 1px dashed rgb(255, 255, 255);
+  padding: 50px;
+  margin: 20px;
+  margin-left: 350px;
+  margin-top: 70px;
+}
+
+.text
+{
   font-family: consolas; 
+  text-align: left;
   font-size: small;
   color:rgb(255, 255, 255);
   line-height:5px;
@@ -14,10 +26,19 @@ div.a
 
 a:link, a:visited
 {
-  color: rgb(0, 102, 204);
+  color: rgb(0, 55, 218);
 }
 
 cursor
 {
   font-size: 14px;
 }
+
+/*  
+
+  margin-left: 600px;
+  margin-top: 120px; 
+  text-indent: 40%;
+
+
+*/
