--- a/style.css
+++ b/style.css
@@ -3,19 +3,17 @@ body
   background-color:rgb(0, 0, 0)
 }
 
-div.wrap {max-width: 1200px;} 
-
-div.box
+.box
 {
-  width: 700px;
   border: 1px dashed rgb(255, 255, 255);
   padding: 50px;
-  margin: 20px;
-  margin-left: 350px;
-  margin-top: 70px;
+  width:50%;
+  height:50%;
+  margin:4% 22%;
+  float:left;
 }
 
-div.text
+.text
 {
   font-family: consolas; 
   text-align: left;
@@ -35,10 +33,7 @@ cursor
 }
 
 /*  
-
   margin-left: 600px;
   margin-top: 120px; 
   text-indent: 40%;
-
-
 */
