--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
   border: 1px solid  rgb(255, 255, 255);
   padding: 17px;
   margin: auto;
-  margin-top: 70px; 
+  margin-top: 5%; 
 
   font-family: consolas; 
   font-size: small;
