--- a/style.css
+++ b/style.css
@@ -5,14 +5,15 @@ body{
 }
 
 .text-box{
-  border: 1px solid  rgb(255, 255, 255);
-  padding: 17px;
+  border: 1px solid  rgb(204, 204, 204);
+  border-radius: 8px;
+  padding: 16px;
   margin: auto;
-  margin-top: 5%; 
+  margin-top: 6%; 
 
   font-family: consolas; 
-  font-size: small;
-  color:rgb(255, 255, 255);
+  font-size: 12px;
+  color:rgb(204, 204, 204);
   line-height:5px;
   
   min-width: 400px;
@@ -20,15 +21,17 @@ body{
 }
 
 .buttons-1{
+  color:rgb(242, 242, 242);
   position: absolute;
-  margin-left: 650px;
-  margin-top: -4px; 
+  margin-left: 652px;
+  margin-top: -3px; 
   min-width: 400px;
   max-width: 700px;
+  font-size: 13px;
 }
 
 a:link, a:visited{
-  color: rgb(0, 55, 218);
+  color: rgb(242, 242, 242);
 }
 
 cursor{
